--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </div>
 
 <script>
-  const text = "Benimle çıkar mısın?";
+  const text = "Benimle tatile çıkar mısın?";
   const h1 = document.getElementById('mainText');
   let i = 0;
 
